# drift

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  drift.example.yaml
examples/: dual_source.yaml  minimal.yaml  system_ambient.yaml  weather_ambient.yaml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  schema.rs
src/engine/: midi.rs  mixer.rs  mod.rs  player.rs  recorder.rs
src/mapping/: exponential.rs  linear.rs  logarithmic.rs  mapper.rs  mod.rs  pattern.rs  quantize.rs  threshold.rs
src/sources/: git.rs  mod.rs  price.rs  source.rs  system.rs  weather.rs
src/synth/: drone.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  voice.rs
src/viz/: mod.rs  waveform.rs
